accueil: fix "searchLoupe" position on small devices

--- a/accueil/accueil.css
+++ b/accueil/accueil.css
@@ -170,6 +170,10 @@ padding-right: 1.5em;
     .search form {
         width: 90%;
     }
+    .searchLoupe {
+        position: absolute;
+        right: 30px;
+    }
     .search input {
         width: 100%;
         box-sizing: border-box;
